Description
ullTotalPageFile is reported as pages instead of bytes. This causes ReactX Diagnostic tool to display incorrect page file size.
Attached patch fixes this by setting ullTotalPageFile to total bytes instead of number of pages.
ullTotalPageFile is reported as pages instead of bytes. This causes ReactX Diagnostic tool to display incorrect page file size.
Attached patch fixes this by setting ullTotalPageFile to total bytes instead of number of pages.