[KERNEL32] - GlobalMemoryStatusEx: Correctly compute ullTotalPageFile which should be in bytes, instead of in number of pages. Patch by contributor "kkat". CORE-10361 - GlobalMemoryStatusEx: Fail if the stored length in the data buffer is not what is expected by the API (required by the spec, see MSDN; on the contrary, GlobalMemoryStatus does not require that.) - GlobalMemoryStatus: Correctly round up the reported total/available memory values, in case they are bigger than ~= 2GB.

svn path=/trunk/; revision=69608